--- a/styles.css
+++ b/styles.css
@@ -64,3 +64,32 @@ body {
 p{
     color: white;
 }
+
+ul li {
+    list-style: none;
+}
+
+.videoRep {
+    margin-left: -45px;
+}
+
+.textoSecundarioVideo {
+    color: grey;
+    margin-top: -15px;
+}
+
+.hr {
+    border: 0.5px solid gray;
+    margin-left: -50px;
+    margin-top: -0.7px;
+}
+
+.aContinuacion {
+    margin-left: -50px;
+    color: white;
+}
+
+.repAutotamica {
+    color: #878787;
+    margin-left: 20px;
+}
