--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 body {
-    background-color: #000000 !important;
+    background-color: #131313 !important;
 }
 
 .bgNav {
-    background-color: #0E0C0C;
+    background-color: #242323;
 }
 
 .Logo-Yutu {
@@ -93,4 +93,31 @@ ul li {
 .repAutotamica {
     color: #878787;
     margin-left: 20px;
+}
+
+.imgAccount {
+    border-radius: 100%;
+    width: 5%;
+}
+
+.imgVideo {
+    border-radius: 100%;
+    width: 7%;
+}
+
+.colorLetter {
+    color: #a8a8a8;
+}
+
+.comentariosv2{
+    color: white ;
+    margin-left: -220px;
+    font-size: 14px;
+    margin-top: 10px;
+}
+.comentariosv3{
+    color: gray;
+    margin-left: -220px;
+    font-size: 16px;
+    margin-top: -20px;
 }
